--- a/native/build.gradle
+++ b/native/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation group: 'org.ballerinalang', name: 'ballerina-runtime', version: "${ballerinaLangVersion}"
     implementation group: 'org.ballerinalang', name: 'ballerina-lang', version: "${ballerinaLangVersion}"
     implementation group: 'org.ballerinalang', name: 'value', version: "${ballerinaLangVersion}"
+
+    dist group: 'software.amazon.awssdk', name: 'marketplaceentitlement', version: "${awsMpEntitlementSdkVersion}"
 }
 
 tasks.withType(JavaCompile) {
