--- a/ballerina/Dependencies.toml
+++ b/ballerina/Dependencies.toml
@@ -16,11 +16,23 @@ modules = [
 ]
 
 [[package]]
+org = "ballerina"
+name = "time"
+version = "2.4.0"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"}
+]
+modules = [
+	{org = "ballerina", packageName = "time", moduleName = "time"}
+]
+
+[[package]]
 org = "ballerinax"
 name = "aws.marketplace.mpe"
 version = "0.1.0"
 dependencies = [
-	{org = "ballerina", name = "jballerina.java"}
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "time"}
 ]
 modules = [
 	{org = "ballerinax", packageName = "aws.marketplace.mpe", moduleName = "aws.marketplace.mpe"}
