--- a/ballerina/Dependencies.toml
+++ b/ballerina/Dependencies.toml
@@ -9,6 +9,17 @@ distribution-version = "2201.9.2"
 
 [[package]]
 org = "ballerina"
+name = "constraint"
+version = "1.5.0"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"}
+]
+modules = [
+	{org = "ballerina", packageName = "constraint", moduleName = "constraint"}
+]
+
+[[package]]
+org = "ballerina"
 name = "jballerina.java"
 version = "0.0.0"
 modules = [
@@ -31,6 +42,7 @@ org = "ballerinax"
 name = "aws.marketplace.mpe"
 version = "0.1.0"
 dependencies = [
+	{org = "ballerina", name = "constraint"},
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "time"}
 ]
