--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -2,7 +2,7 @@
 distribution = "2201.9.2"
 org = "ballerinax"
 name = "aws.marketplace.mpe"
-version = "0.1.0"
+version = "0.1.1"
 license= ["Apache-2.0"]
 authors = ["Ballerina"]
 keywords = ["AWS", "Marketplace", "Cloud/Subscriptions", "Entitlement Management"]
@@ -15,5 +15,11 @@ graalvmCompatible = true
 [[platform.java17.dependency]]
 groupId = "io.ballerina.lib"
 artifactId = "aws.marketplace.mpe-native"
-version = "0.1.0"
-path = "../native/build/libs/aws.marketplace.mpe-native-0.1.0.jar"
+version = "0.1.1-SNAPSHOT"
+path = "../native/build/libs/aws.marketplace.mpe-native-0.1.1-SNAPSHOT.jar"
+
+[[platform.java17.dependency]]
+groupId = "io.ballerina.stdlib"
+artifactId = "time-native"
+version = "2.4.0"
+path = "./lib/time-native-2.4.0.jar"
